--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery-smooth-scroll": "2.2.0",
     "lazysizes": "4.0.1",
     "normalize.css": "7.0.0",
+    "owl.carousel": "^2.3.4",
     "picturefill": "3.0.2",
     "waypoints": "4.0.1"
   },
