--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-site",
+  "name": "portfolio",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --config webpack.config.js"
